# python-cli-template

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python.yml
