[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Robert Smieja <robertsmieja@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Click = "^7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
